TextTrackCue's .endTime property should fire a TypeError when NaN is assigned https://bugs.webkit.org/show_bug.cgi?id=103413

Patch by Antoine Quint <graouts@apple.com> on 2012-12-05
Reviewed by Eric Carlson.

Source/WebCore:

Check whether the new time passed to setStartTime() and setEndTime() is none of NaN or Infinity,
otherwise throwing a TypeError.

Thanks to this fix, we're no longer skipping media/track/opera/interfaces/TextTrackCue/endTime.html and
media/track/opera/interfaces/TextTrackCue/startTime.html.

* html/track/TextTrackCue.cpp:
(WebCore::TextTrackCue::setStartTime):
(WebCore::TextTrackCue::setEndTime):
* html/track/TextTrackCue.h:
(TextTrackCue):
* html/track/TextTrackCue.idl:

LayoutTests:

Stop skipping two tests that now have new passing conditions, only held back from
passing altogether by https://bugs.webkit.org/show_bug.cgi?id=103258.

* media/track/opera/interfaces/TextTrackCue/endTime-expected.txt: Added.
* media/track/opera/interfaces/TextTrackCue/startTime-expected.txt: Added.
* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:
* platform/win/TestExpectations:

Canonical link: https://commits.webkit.org/122266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136684 268f45cc-cd09-0410-ab3c-d52691b4dbfc