Source/WebCore/html/track/TextTrackCue.h
@@ -90,10 +90,10 @@ public:
     void setId(const String&);
 
     double startTime() const { return m_startTime; }
-    void setStartTime(double);
+    void setStartTime(double, ExceptionCode&);
 
     double endTime() const { return m_endTime; }
-    void setEndTime(double);
+    void setEndTime(double, ExceptionCode&);
 
     bool pauseOnExit() const { return m_pauseOnExit; }
     void setPauseOnExit(bool);
